--- a/trunk/src/Makefile.in
+++ b/trunk/src/Makefile.in
@@ -40,7 +40,7 @@ LIB_SRC=H5.c H5A.c H5AC.c H5B.c H5C.c H5D.c H5Dcontig.c H5Dcompact.c H5Dio.c  \
         H5Obogus.c H5Ocont.c H5Odtype.c H5Oefl.c H5Ofill.c H5Olayout.c        \
         H5Omtime.c H5Oname.c H5Onull.c H5Opline.c H5Osdspace.c H5Oshared.c    \
         H5Ostab.c H5P.c H5Pdcpl.c H5Pdxpl.c H5Pfapl.c H5Pfcpl.c H5Ptest.c     \
-        H5R.c H5RS.c H5S.c H5Sall.c H5Shyper.c H5Smpio.c  H5Snone.c           \
+        H5R.c H5RC.c H5RS.c H5S.c H5Sall.c H5Shyper.c H5Smpio.c  H5Snone.c    \
         H5Spoint.c H5Sselect.c H5Stest.c H5ST.c H5T.c H5Tarray.c H5Tbit.c     \
         H5Tcommit.c H5Tcompound.c H5Tconv.c H5Tcset.c H5Tenum.c H5Tfields.c   \
         H5Tfixed.c H5Tfloat.c H5Tinit.c H5Tnative.c H5Toffset.c H5Topaque.c   \
@@ -70,9 +70,9 @@ PRIVATE_HDR=H5private.h H5Aprivate.h H5Apkg.h H5ACprivate.h H5Bprivate.h      \
 	H5FSprivate.h H5Gprivate.h H5Gpkg.h H5HGprivate.h H5HGpkg.h           \
 	H5HLprivate.h H5HLpkg.h H5HPprivate.h H5Iprivate.h H5MFprivate.h      \
 	H5MMprivate.h H5Oprivate.h H5Opkg.h H5Pprivate.h H5Ppkg.h             \
-	H5Rprivate.h H5RSprivate.h H5Sprivate.h H5STprivate.h H5Tprivate.h    \
-	H5TBprivate.h H5Tpkg.h H5TSprivate.h H5Vprivate.h H5Zprivate.h        \
-	H5Zpkg.h H5config.h
+	H5Rprivate.h H5RCprivate.h H5RSprivate.h H5Sprivate.h H5STprivate.h   \
+        H5Tprivate.h H5TBprivate.h H5Tpkg.h H5TSprivate.h H5Vprivate.h        \
+        H5Zprivate.h H5Zpkg.h H5config.h
 
 ## Error header generation
 ##
