--- a/branches/hdf5_1_6/tools/h5dump/Makefile.in
+++ b/branches/hdf5_1_6/tools/h5dump/Makefile.in
@@ -1,4 +1,3 @@
-## HDF5 Library Makefile(.in)
 ##
 ## Copyright by the Board of Trustees of the University of Illinois.
 ## All rights reserved.
@@ -11,7 +10,9 @@
 ## is linked from the top-level documents page.  It can also be found at
 ## http://hdf.ncsa.uiuc.edu/HDF5/doc/Copyright.html.  If you do not have
 ## access to either file, you may request a copy from hdfhelp@ncsa.uiuc.edu.
-## 
+##
+## HDF5 Library Makefile(.in)
+##
 top_srcdir=@top_srcdir@
 top_builddir=../..
 srcdir=@srcdir@
@@ -65,6 +66,12 @@ TEST_OBJ=$(TEST_SRC:.c=.lo)
 ##
 check test _test: $(PROGS)
 
+## Some XML tests fail in some machines such as 64bits platforms.
+## Run XML tests only if asked.
+check-xml:
+	$(MAKE) TEST_SCRIPTS=$(TEST_SCRIPTS_XML) check
+
+
 ## How to build the programs...They all depend on the hdf5 library and
 ## the tools library compiled in this directory.
 ##
@@ -75,83 +82,5 @@ h5dump: h5dump.lo
 
 h5dumpgentest: h5dumpgentest.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ h5dumpgentest.lo $(LIBTOOLS) $(LIBHDF5) $(LDFLAGS) $(LIBS)
-
-## Runs each test in order, passing $(TEST_FLAGS) to the program.
-## Since tests are done in a shell loop, "make -i" does apply inside it.
-## Set HDF5_Make_Ignore to a non-blank string to ignore errors inside the loop.
-## The timestamps give a rough idea how much time the tests use.
-##
-tests-xml: $(TEST_PROGS_XML) $(TEST_PROGS_PARA_XML) $(TEST_SCRIPTS_XML) $(LIB)
-check-xml test-xml _test-xml: tests-xml
-	@echo "===Tests begin `date`==="
-	@for test in $(TEST_PROGS_XML) dummy; do                                  \
-	   if test $$test != dummy; then				      \
-	      echo "============================";			      \
-	      echo "Testing $$test $(TEST_FLAGS)";			      \
-	      echo "============================";			      \
-	      srcdir="$(srcdir)"					      \
-		 $(RUNTEST) ./$$test $(TEST_FLAGS) ||			      \
-		 (test $$HDF5_Make_Ignore && echo "*** Error ignored") ||     \
-		 break;							      \
-	      echo "";							      \
-	   fi;								      \
-	done;								      \
-	test $$test = dummy || false
-	@if test -n "$(TEST_PROGS_PARA_XML)"; then				      \
-	    echo "**** Hint ****";					      \
-	    echo "Parallel test files reside in the current directory"	      \
-	         "by default.";						      \
-	    echo "Set HDF5_PARAPREFIX to use another directory. E.g.,";	      \
-	    echo "    HDF5_PARAPREFIX=/PFS/user/me";			      \
-	    echo "    export HDF5_PARAPREFIX";				      \
-	    echo "    make check";					      \
-	    echo "**** end of Hint ****";				      \
-	fi
-	@for test in $(TEST_PROGS_PARA_XML) dummy; do                             \
-	   if test $$test != dummy; then				      \
-	      echo "============================";			      \
-	      echo "Testing $$test $(TEST_FLAGS)";			      \
-	      echo "============================";			      \
-	      srcdir="$(srcdir)"					      \
-		 $(RUNPARALLEL) ./$$test $(TEST_FLAGS) ||		      \
-		 (test $$HDF5_Make_Ignore && echo "*** Error ignored") ||     \
-		 break;							      \
-	      echo "";							      \
-	   fi;								      \
-	done;								      \
-	test $$test = dummy || false
-	@for test in $(TEST_SCRIPTS_XML) dummy; do                                \
-	   if test $$test != dummy; then				      \
-	      echo "============================";			      \
-	      echo "Testing $$test $(TEST_FLAGS)";			      \
-	      echo "============================";			      \
-	      RUNSERIAL="$(RUNSERIAL)" RUNPARALLEL="$(RUNPARALLEL)"           \
-	         srcdir="$(srcdir)"					      \
-		 /bin/sh $$test $(TEST_FLAGS) ||		              \
-		 (test $$HDF5_Make_Ignore && echo "*** Error ignored") ||     \
-		 break;							      \
-	      echo "";							      \
-	   fi;								      \
-	done;								      \
-	test $$test = dummy || false
-	@echo "===Tests ended `date`==="
-	@for d in X $(SUBDIRS); do                                      \
-	    if test $$d != X; then                                      \
-	        (set -x; cd $$d && $(MAKE) tests) || exit 1;            \
-	    fi;                                                         \
-	done
-
-## Run test with different Virtual File Driver
-check-vfd-xml:
-	@for vfd in $(VFD_LIST) dummy; do				      \
-	    if test $$vfd != dummy; then                                      \
-		echo "============================";                          \
-		echo "Testing Virtual File Driver $$vfd";		      \
-		echo "============================";                          \
-		HDF5_DRIVER=$$vfd $(MAKE) check;			      \
-	    fi;								      \
-	done
-
-check-all: check check-xml
 
 @CONCLUDE@
