--- a/doc/html/cpplus_RM/Makefile.in
+++ b/doc/html/cpplus_RM/Makefile.in
@@ -11,7 +11,7 @@ VPATH=.:@srcdir@
 @COMMENCE@
 
 # Subdirectories in build-order (not including `examples')
-SUBDIRS=
+SUBDIRS=header_files
 DOCDIR=$(docdir)/hdf5/cpplus_RM
 
 # Public doc files (to be installed)...
@@ -122,7 +122,7 @@ PUB_DOCS= H5AbstractDs_8cpp.html H5AbstractDs_8h-source.html                  \
           doxygen.css doxygen.png dsets_8cpp-example.html examples.html       \
           files.html functions.html functions_func.html functions_vars.html   \
           globals.html globals_defs.html globals_func.html globals_type.html  \
-          globals_vars.html header.html header_files hierarchy.html           \
+          globals_vars.html header.html hierarchy.html                        \
           index.html namespaceH5.html namespacemembers.html                   \
           namespacemembers_func.html namespacemembers_type.html               \
           namespacemembers_vars.html namespaces.html namespacestd.html        \
