--- a/configure.in
+++ b/configure.in
@@ -2432,6 +2432,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  tools/h5dump/testh5dump.sh
                  tools/h5import/Makefile
                  tools/h5diff/Makefile
+                 tools/h5jam/Makefile
                  tools/h5repack/Makefile
                  tools/h5repack/h5repack.sh
                  tools/h5ls/Makefile
