--- a/fortran/configure.in
+++ b/fortran/configure.in
@@ -823,18 +823,22 @@ case "X-$enable_parallel" in
 
     dnl Try link a simple MPI program.  If fail, try again with -lmpi.
     AC_TRY_FLINK(mpif.h, [
+        integer:: ierr
         call mpi_file_open( ierr )],,
         AC_CHECK_FLIB(mpi, [
           include 'mpif.h'
+          integer:: ierr
           call mpi_file_open( ierr )],, PARALLEL=no))
 
     dnl Then try link a simple MPI-IO program.  If fail, try again with
     dnl -lmpio.
     if test "X$PARALLEL" = "Xyes"; then
       AC_TRY_FLINK(mpif.h, [
+          integer:: ierr
           call mpi_file_open( ierr )],,
           AC_CHECK_FLIB(mpio, [
             include 'mpif.h'
+            integer:: ierr
             call mpi_file_open( ierr )],, PARALLEL=no))
     fi
 
@@ -871,6 +875,7 @@ if test -n "$PARALLEL"; then
   dnl Check that we can link a simple MPI and MPI-IO application
   AC_MSG_CHECKING(whether a simple MPI-IO program can be linked)
   AC_TRY_FLINK(mpif.h,[
+      integer:: ierr
       call mpi_file_open( ierr )],
             AC_MSG_RESULT(yes),
             AC_MSG_RESULT(no)
