--- a/configure.in
+++ b/configure.in
@@ -2433,6 +2433,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  tools/h5import/Makefile
                  tools/h5diff/Makefile
                  tools/h5jam/Makefile
+                 tools/h5jam/testh5jam.sh
                  tools/h5repack/Makefile
                  tools/h5repack/h5repack.sh
                  tools/h5ls/Makefile
