--- a/configure.in
+++ b/configure.in
@@ -1043,7 +1043,6 @@ dnl command-line switch. The value is an include path and/or a library path.
 dnl If the library path is specified then it must be preceded by a comma.
 dnl
 AC_SUBST(USE_FILTER_SZIP) USE_FILTER_SZIP="no"
-AC_SUBST(USE_FILTER_SZIP_ENCODER) USE_FILTER_SZIP_ENCODER="no"
 AC_ARG_WITH([szlib],
             [AC_HELP_STRING([--with-szlib=DIR],
                             [Use szlib library for external szlib I/O
@@ -1136,10 +1135,7 @@ if test "x$HAVE_SZLIB" = "xyes" -a "x$HAVE_SZLIB_H" = "xyes"; then
         ], [hdf5_cv_szlib_can_encode=yes], [hdf5_cv_szlib_can_encode=no],)])
 
     if test ${hdf5_cv_szlib_can_encode} = "yes"; then
-        AC_DEFINE([SZIP_CAN_ENCODE], [1],
-                  [Define if szip encoder is present])
         AC_MSG_RESULT([yes])
-        USE_FILTER_SZIP_ENCODER="yes"
     else
         AC_MSG_RESULT([no])
     fi
@@ -1149,6 +1145,11 @@ if test "x$HAVE_SZLIB" = "xyes" -a "x$HAVE_SZLIB_H" = "xyes"; then
         EXTERNAL_FILTERS="${EXTERNAL_FILTERS},"
     fi
     EXTERNAL_FILTERS="${EXTERNAL_FILTERS}szip"
+    if test ${hdf5_cv_szlib_can_encode} = "yes"; then
+        EXTERNAL_FILTERS="${EXTERNAL_FILTERS}(encoder)"
+    else
+        EXTERNAL_FILTERS="${EXTERNAL_FILTERS}(no encoder)"
+    fi
 fi
 
 dnl ----------------------------------------------------------------------
