--- a/trunk/tools/h5repack/h5repack.sh.in
+++ b/trunk/tools/h5repack/h5repack.sh.in
@@ -14,8 +14,6 @@
 #
 # Tests for the h5repack tool
 
-# Determine if SZIP has the encoder available
-USE_FILTER_SZIP_ENCODER="@USE_FILTER_SZIP_ENCODER@"
 USE_FILTER_SZIP="@USE_FILTER_SZIP@"
 USE_FILTER_DEFLATE="@USE_FILTER_DEFLATE@"
 USE_FILTER_SHUFFLE="@USE_FILTER_SHUFFLE@"
@@ -27,6 +25,9 @@ H5REPACK_BIN=`pwd`/$H5REPACK    # The path of the tool binary
 
 H5DIFF=../h5diff/h5diff         # The h5diff tool name 
 H5DIFF_BIN=`pwd`/$H5DIFF        # The path of the h5diff  tool binary
+
+H5DETECTSZIP=testh5repack_detect_szip               # The tool name
+H5DETECTSZIP_BIN=`pwd`/$H5DETECTSZIP    # The path of the tool binary
 
 nerrors=0
 verbose=yes
@@ -123,8 +124,12 @@ TOOLTEST()
 # See which filters are usable (and skip tests for filters we
 # don't have).  Do this by searching H5pubconf.h to see which
 # filters are defined.
-# A filter value of 3 means the filter can read and write, 2
-# is read-only, 1 is write-only, and 0 is not present.
+
+# detect whether the encoder is present. 
+USE_FILTER_SZIP_ENCODER="no";
+if test $USE_FILTER_SZIP = "yes"; then
+USE_FILTER_SZIP_ENCODER=`$RUNSERIAL $H5DETECTSZIP_BIN`
+fi
 
 # copy files (these files have no filters; test2.h5 has copied references that h5diff detects)
 TOOLTEST test0.h5
